--- a/ApiConnector/ApiConnector.Net.HttpRest/ApiConnector.Net.HttpRest.nuspec
+++ b/ApiConnector/ApiConnector.Net.HttpRest/ApiConnector.Net.HttpRest.nuspec
@@ -2,12 +2,12 @@
 <package >
   <metadata>
     <id>ApiConnector.Net.HttpRest</id>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <authors>Rafal Grycuk</authors>
     <owners>Rafal Grycuk</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Simple Rest Api Connector for sending and receiving Rest requests.</description>
-    <releaseNotes></releaseNotes>
+    <description>Simple Rest Api Connector for sending and receiving Rest requests. Designed for .NET Framework applications</description>
+    <releaseNotes>Synchronous Request method added</releaseNotes>
     <copyright>By Rafal Grycuk</copyright>
     <tags>REST  Api Connector</tags>
     <dependencies>
