--- a/ApiConnector/ApiConnector.Net.HttpRest/ApiConnector.Net.HttpRest.csproj
+++ b/ApiConnector/ApiConnector.Net.HttpRest/ApiConnector.Net.HttpRest.csproj
@@ -56,7 +56,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiConnector.cs" />
-    <Compile Include="ContentType.cs" />
+    <Compile Include="Models\ApiResponseMessage.cs" />
+    <Compile Include="Models\ContentType.cs" />
     <Compile Include="IApiConnector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
