--- a/ApiConnector/ApiConnector.Net.HttpRest/ApiConnector.Net.HttpRest.nuspec
+++ b/ApiConnector/ApiConnector.Net.HttpRest/ApiConnector.Net.HttpRest.nuspec
@@ -2,14 +2,14 @@
 <package >
   <metadata>
     <id>ApiConnector.Net.HttpRest</id>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
     <authors>Rafal Grycuk</authors>
     <owners>Rafal Grycuk</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Simple Rest Api Connector for sending and receiving Rest requests. Designed for .NET Framework applications</description>
+    <description>Simple REST Api Connector for sending and receiving REST requests. Designed for .NET Framework applications</description>
     <releaseNotes>ApiResponseMessage added</releaseNotes>
     <copyright>By Rafal Grycuk</copyright>
-    <tags>REST  Api Connector</tags>
+    <tags>REST Api Connector HTTP REST</tags>
     <dependencies>
       <dependency id="Microsoft.Bcl" version="1.1.10" />
       <dependency id="Microsoft.Bcl.Build" version="1.0.21" />
