--- a/ApiConnector/ApiConnector.Net.HttpRest/ApiConnector.Net.HttpRest.csproj
+++ b/ApiConnector/ApiConnector.Net.HttpRest/ApiConnector.Net.HttpRest.csproj
@@ -57,9 +57,11 @@
   <ItemGroup>
     <Compile Include="ApiConnector.cs" />
     <Compile Include="Models\ApiResponseMessage.cs" />
+    <Compile Include="Models\AuthenticationType.cs" />
     <Compile Include="Models\ContentResponseType.cs" />
     <Compile Include="IApiConnector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\Extensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ApiConnector.Net.HttpRest.nuspec">
