--- a/ApiConnector/Test/ApiConnector.Net.Test/ApiConnector.Net.Test.csproj
+++ b/ApiConnector/Test/ApiConnector.Net.Test/ApiConnector.Net.Test.csproj
@@ -49,6 +49,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Xml" />
     <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
       <HintPath>..\..\packages\xunit.abstractions.2.0.1\lib\net35\xunit.abstractions.dll</HintPath>
       <Private>True</Private>
@@ -79,9 +80,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Models\Customer.cs" />
     <Compile Include="RestApiConnectorTests.cs" />
     <Compile Include="Models\ApiInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilites\Extensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
