--- a/ApiConnector/ApiConnector.Core.HttpRest/project.json
+++ b/ApiConnector/ApiConnector.Core.HttpRest/project.json
@@ -1,11 +1,11 @@
 {
   "title": "ApiConnector.Core.HttpRest",
   "description": "Simple REST Api Connector for sending and receiving REST requests. Designed for .NET Core applications",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "copyright": "By Rafal Grycuk",
   "authors": [ "Rafal Grycuk" ],
   "packOptions": {
-    "releaseNotes": "",
+    "releaseNotes": "Default headers added",
     "tags": [ "REST", "Api", "Connector" , "HTTP REST"]
   },
   "dependencies": {
